# LooP-OS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  SECURITY.md  cleanup_report.json  emergency_cleanup.sh  environment.yml  evaluation_report.json  fyodoros.py  fyodoros_architecture_1.html  index.html  pyproject.toml  reproduce_issue.py  requirements.txt  run.bat  run.sh  setup_core.py  setup_extensions.py  system_call.py  users.json
.Jules/: palette.md
.github/workflows/: arch_iso.yml  ci.yml  docker-publish.yml  release.yml  release_iso.yml  remaster_iso.yml  test-runner.yml  veracode.yml
docs/: BOOT.md  QA_CHECKLIST_v0.8.0.md  agent_schema.json  architecture_diagram.mmd  permissions.md
docs/release_notes/: v0.7.1.md
gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  setup_gui.py  verify.py  vite.config.js
gui/src/: App.css  App.jsx  App.tsx  main.jsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
install/: setup_loop.sh  uninstall_loop.sh
kernel/: __init__.py  agent.py  device.py  dom.py  filesystem.py  kernel.py  llm.py  process.py  sandbox.py  scheduler.py  syscall_handler.py  syscalls.py  tty.py  users.py
scripts/: build_kernel.py  test_ghost_mode.py  test_telemetry_handshake.py
shell/: shell.py
src/fyodoros/: __main__.py  cli.py
src/loop/: __init__.py  __main__.py  cli.py  os_init.py
supervisor/: journal_daemon.py  supervisor.py
tests/: benchmark_startup.py  cleanup.py  conftest.py  test_agent_sensory.py  test_docker.py  test_explorer.py  test_filesystem.py  test_k8s.py  test_listener.py  test_plugin_registry.py  test_scheduler.py  test_senses.py  test_syscall.py  test_syscall_cache.py  test_syscalls.py  test_users.py  verify_sidecar.py
tests/chaos/: conftest.py  test_chaos.py  test_race.py  test_security.py  test_stress.py
tests/docker/: Dockerfile.kiosk  README.md  simulate_takeover.sh
tests/evaluation/: evaluate_pipeline.py
tests/integration/: test_agent_e2e.py
tests/kernel/: test_scheduler_shutdown.py
tests/phase2_3/: test_kernel.py  test_plugins.py  test_sandbox.py  test_service_manager.py
tests/security/: test_fuzz_paths.py
tests/unit/: test_new_features.py  (+6 more)
verification/: verify_hud.py
(+204 files in other folders)
