
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fyodoros"
version = "0.2"
authors = [
  { name="FyodorOS Team", email="khoitruong071510@gmail.com" },
]
description = "The Experimental AI Microkernel OS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "gradio",
    "ddgs",
    "playwright==1.41.2",
    "rich",
    "typer"
]

[project.scripts]
fyodor = "fyodoros.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
